trunk/.err
test.c: In function ‘int main()’:
test.c:99:8: error: invalid conversion from ‘void*’ to ‘test*’ [-fpermissive]
  p=test(weak);
    ~~~~^~~~~~
cc1plus: fatal error: ./: No such file or directory
compilation terminated.
